@startuml ChatApp_StorageFiles
'==============================================================
' Diagrama 6: Stocare fisiere (avatare + atasamente)
' Flux: Controllers -> FileStorageService -> GCS
'==============================================================

skinparam monochrome true
skinparam shadowing false
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam defaultFontName "Arial"
skinparam packageStyle rectangle
skinparam nodesep 35
skinparam ranksep 55

hide circle

top to bottom direction

title Stocare fisiere si curatenie

package "controller" as PC {
    class UserController {
        + uploadAvatar(file) : ResponseEntity
        + deleteAvatar() : ResponseEntity
    }
    class FileController {
        + upload(file) : ResponseEntity
        + download(key) : ResponseEntity
    }
}

package "service" as PS {
    class ChatService {
        + sendMessage(...) : MessageDto
    }
    class FileStorageService {
        + upload(file) : UploadResult
        + uploadAvatar(file) : String
        + generateShortLivedSignedUrl(name) : String
        + freshUrlFor(stored) : String
        + delete(url) : void
        + deleteByKey(key) : void
    }
    class MessageCleanupService {
        + cleanupOldDeletedMessages() : void
        + detectOrphanAttachments() : void
        + logDatabaseStats() : void
    }
    class "FileStorageService.UploadResult" as UploadResult <<record>> {
        + url : String
        + name : String
        + contentType : String
        + size : long
    }
}

package "repository" as PR {
    interface MessageRepository <<JpaRepository>>
}

class "Google Cloud Storage" as GCS <<cloud>>

' Aliniere ---------------------------------------------------
UserController -[hidden]right- FileController
ChatService -[hidden]right- FileStorageService
FileStorageService -[hidden]right- MessageCleanupService

' Relatii ----------------------------------------------------
UserController --> FileStorageService
FileController --> FileStorageService
ChatService --> FileStorageService : atasamente mesaje

FileStorageService +-- UploadResult
FileStorageService --> GCS : signed URLs

MessageCleanupService --> MessageRepository
MessageCleanupService --> GCS : detecteaza fisiere orfane

@enduml
